kubernetes/apps/media/sabnzbd/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Sabnzbd
    gethomepage.dev/group: Media
    gethomepage.dev/icon: sabnzbd.png
    gethomepage.dev/description: Newsgroup Downloader
    gethomepage.dev/href: https://sabnzbd.${SECRET_DOMAIN}
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: websecure
  hostnames:
    - "sabnzbd.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: chain-no-auth-restrict-networks
      backendRefs:
        - name: sabnzbd
          port: 8080
